--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -20,7 +20,7 @@
         background-color: transparent;
         display: inline-flex;
         position: relative;
-        border: var(--colors-silver);
+        border: 1px solid var(--colors-silver);
         button,
         span {
             border: 0;
