--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -29,6 +29,22 @@ a.button {
     cursor: pointer;
     align-items: center;
     transition: all 0.2s ease;
+    svg {
+        path {
+            fill: var(--color-button-primary-color);
+        }
+    }
+
+    &:hover {
+        background-color: var(--color-button-primary-hover);
+        // @media screen and (min-width: 601px) {
+        // }
+    }
+    &:disabled {
+        background-color: var(--color-button-primary-disabled);
+        cursor: default;
+        opacity: 0.5;
+    }
 
     @media screen and (max-width: 600px) {
         position: relative;
@@ -72,24 +88,6 @@ a.button {
         }
     }
 
-    svg {
-        path {
-            fill: var(--color-button-primary-color);
-        }
-    }
-
-    &:hover {
-        @media screen and (min-width: 601px) {
-            background-color: var(--color-button-primary-hover);
-        }
-    }
-
-    &:disabled {
-        background-color: var(--color-button-primary-disabled);
-        cursor: default;
-        opacity: 0.5;
-    }
-
     &.icon-left svg {
         margin-left: 0;
         margin-right: var(--spacing-xs);
@@ -102,6 +100,10 @@ a.button {
 
     &.small-text {
         font-size: 12px;
+    }
+
+    &.icon-only svg {
+        margin: 0;
     }
 
     &.secondary {
@@ -166,7 +168,7 @@ a.button {
 }
 
 @media (prefers-color-scheme: dark) {
-    button,
+    .button,
     a.button {
         --color-button-primary-hover: #3ff299;
     }
