--- a/src/styles/components/combobox.scss
+++ b/src/styles/components/combobox.scss
@@ -17,7 +17,7 @@
         width: 100%;
         height: 100%;
         border: 0;
-        background-color: var(--input-background);
+        background-color: var(--colors-inputbg);
         /* &:disabled {
       opacity: 0.5;
     } */
@@ -50,7 +50,7 @@
         position: absolute;
         top: 100%;
         left: 0;
-        background-color: var(--input-background);
+        background-color: var(--colors-inputbg);
         list-style-type: none;
         padding: 0;
         z-index: 100;
