--- a/src/styles/components/formcontrol.scss
+++ b/src/styles/components/formcontrol.scss
@@ -1,5 +1,6 @@
 .form-control {
     position: relative;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     .input-icon {
