--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -20,7 +20,7 @@
     font-size: 1.25rem;
     cursor: pointer;
     line-height: 1.1;
-    background-color: var(--input-background);
+    background-color: var(--colors-inputbg);
     /* background-image: linear-gradient(to top, #f9f9f9, #fff 33%); */
 
     select,
