Fixed user image

--- a/src/styles/components/timeline.scss
+++ b/src/styles/components/timeline.scss
@@ -1,5 +1,5 @@
 .timeline-wrapper {
-    border-left: var(--colors-silver);
+    border-left: 1px solid var(--colors-silver);
     margin-left: 2rem;
     margin-top: 2.5rem;
     padding: 0;
