--- a/src/styles/components/userimage.scss
+++ b/src/styles/components/userimage.scss
@@ -1,14 +1,26 @@
-.user-image {
-    // --user-image-size: 50px;
+.user-image-wrapper {
+    --user-image-size: 50px;
     --user-image-border-color: var(--colors-secondary);
     display: inline-flex;
     border-radius: 50%;
-    // width: var(--user-image-size);
-    // height: var(--user-image-size);
+    overflow: hidden;
+    width: var(--user-image-size);
+    height: var(--user-image-size);
     border: 2px solid var(--user-image-border-color);
+    position: relative;
+}
+.user-image {
+    // --user-image-size: 50px;
+    width: var(--user-image-size);
+    height: auto;
+    display: block;
+
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 @media (prefers-color-scheme: dark) {
-    .user-image {
+    .user-image-wrapper {
         --user-image-border-color: var(--colors-primary);
     }
 }
