--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,8 @@
     --colors-silver: rgba(235, 235, 235, 0.5);
     --colors-inputbg: #ffffff;
     --colors-backdrop: rgba(255, 255, 255, 0.7);
+    --colors-warn: #f1c40f;
+    --colors-error: #e74c3c;
     --spacing-none: 0;
     --spacing-3xs: 0.15rem;
     --spacing-2xs: 0.25rem;
