--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,10 +10,12 @@
     --colors-pagebg: #ffffff;
     --colors-text: #04060c;
     --colors-silver: rgba(235, 235, 235, 0.5);
-    --colors-inputbg: #ffffff;
+    --colors-inputbg: #f5f5f5;
     --colors-backdrop: rgba(255, 255, 255, 0.7);
     --colors-warn: #f1c40f;
     --colors-error: #e74c3c;
+    --elevation-small: rgba(0, 0, 0, 0.1) 0px 10px 13px -3px, rgba(0, 0, 0, 0.04) 0px 5px 5px -3px;
+    --elevation-medium: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     --spacing-none: 0;
     --spacing-3xs: 0.15rem;
     --spacing-2xs: 0.25rem;
