Added back support to switch theme

--- a/src/styles/components/toggleswitch.scss
+++ b/src/styles/components/toggleswitch.scss
@@ -112,7 +112,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-    .toggle-switch {
+    :root:not(.dark) .toggle-switch {
         --switch-inner: #eeeeee;
     }
 }
