--- a/src/styles/components/infobox.scss
+++ b/src/styles/components/infobox.scss
@@ -16,7 +16,7 @@
     }
 }
 @media (prefers-color-scheme: dark) {
-    .info-box {
+    :root:not(.light) .info-box {
         --info-box-background: rgba(255, 255, 255, 0.1);
         --info-box-border: rgba(255, 255, 255, 0.2);
     }
