--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,4 @@
+$error-color: #e74c3c;
 $spacing: none, 3xs, 2xs, xs, s, m, l, xl, 2xl, 3xl, 4xl, 5xl, 6xl, 7xl;
 $directions: row, row-reverse, column, column-reverse;
 $justifies: flex-start, center, flex-end, space-between, space-around, space-evenly;
