--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 @import "./utils.scss";
 @import "./external.scss";
+@import "./variables.scss";
 // @import "./components/box.scss";
 
 :root {
@@ -14,7 +15,7 @@
     --colors-inputbg: #f5f5f5;
     --colors-backdrop: rgba(255, 255, 255, 0.7);
     --colors-warn: #f1c40f;
-    --colors-error: #e74c3c;
+    --colors-error: $error-color;
     --elevation-small: rgba(0, 0, 0, 0.1) 0px 10px 13px -3px, rgba(0, 0, 0, 0.04) 0px 5px 5px -3px;
     --elevation-medium: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     --elevation-large: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 2px 2px hsl(0deg 0% 0% / 0.075),
