--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -1,92 +1,73 @@
 .select-wrapper {
-    --select-border: #000;
-    --select-focus: var(--colors-secondary);
-    --select-arrow: var(--colors-text);
-    --size-input-default: 3rem;
-    width: 100%;
-    display: grid;
-    grid-template-areas: "select";
-    align-items: center;
-    position: relative;
-    /* min-width: 15ch;
-  max-width: 30ch; */
+  --select-focus: var(--colors-secondary);
+  --select-arrow: var(--colors-text);
+  --size-input-default: 3rem;
+  width: 100%;
+  display: grid;
+  grid-template-areas: 'select';
+  align-items: center;
+  position: relative;
 
-    border: 1px solid var(--select-border);
-    border-radius: 0;
-    height: var(--size-input-default);
-    align-items: center;
-    padding: 0 0.5rem;
+  border: 1px solid var(--color-border);
+  border-radius: 0;
+  height: var(--size-input-default);
+  align-items: center;
+  padding: 0 0.5rem;
 
-    font-size: 1.25rem;
-    cursor: pointer;
-    line-height: 1.1;
+  font-size: 1.25rem;
+  cursor: pointer;
+  line-height: 1.1;
+  background-color: var(--colors-inputbg);
+
+  select {
     background-color: var(--colors-inputbg);
-    /* background-image: linear-gradient(to top, #f9f9f9, #fff 33%); */
+    border: 1px solid var(--color-border);
+    padding: 0 1em 0 0;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: inherit;
+    line-height: inherit;
+    height: calc(var(--size-input-default) - 2px);
+    font-size: 1rem;
 
-    // select,
-    // &::after {
-    //     grid-area: select;
-    // }
+    z-index: 1;
+    outline: none;
 
-    // Custom arrow
-    // &:not(.select--multiple)::after {
-    //     content: "";
-    //     justify-self: end;
-    //     width: 0.8em;
-    //     height: 0.5em;
-    //     background-color: inherit;
-    //     clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-    // }
-    select {
-        // appearance: none;
-        background-color: var(--colors-inputbg);
-        border: none;
-        padding: 0 1em 0 0;
-        margin: 0;
-        width: 100%;
-        font-family: inherit;
-        font-size: inherit;
-        cursor: inherit;
-        line-height: inherit;
-        height: calc(var(--size-input-default) - 2px);
-        font-size: 1rem;
-
-        z-index: 1;
-        outline: none;
-
-        // Remove dropdown arrow in IE10 & IE11
-        // @link https://www.filamentgroup.com/lab/select-css.html
-        &::-ms-expand {
-            display: none;
-        }
-
-        &:focus + .focus {
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
-            border: 2px solid var(--select-focus);
-            border-radius: inherit;
-        }
-        &:disabled {
-            opacity: 0.5;
-        }
-        &:invalid,
-        &.has-error {
-            border-color: #ff0000;
-            color: #ff0000;
-        }
-        [multiple] {
-            padding-right: 0;
-            height: 6rem;
-
-            option {
-                white-space: normal;
-
-                // Only affects Chrome
-                outline-color: var(--select-focus);
-            }
-        }
+    // Remove dropdown arrow in IE10 & IE11
+    // @link https://www.filamentgroup.com/lab/select-css.html
+    &::-ms-expand {
+      display: none;
     }
+
+    &:focus + .focus {
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      right: -1px;
+      bottom: -1px;
+      border: 2px solid var(--select-focus);
+      border-radius: inherit;
+    }
+    &:disabled {
+      opacity: 0.5;
+    }
+    &:invalid,
+    &.has-error {
+      border-color: #ff0000;
+      color: #ff0000;
+    }
+    [multiple] {
+      padding-right: 0;
+      height: 6rem;
+
+      option {
+        white-space: normal;
+
+        // Only affects Chrome
+        outline-color: var(--select-focus);
+      }
+    }
+  }
 }
